# projeto-fiap-fase-5

./: .coverage  .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
api/: main.py  routes.py  schemas.py
api/database/: alunos_db.csv
api/services/: model_services.py
data/raw/: base_dados_passos_magicos.xlsx
frontend/: app.py  clusters.py  monitoring.py  utils.py
notebooks/: clustering_tests.ipynb  eda.ipynb
scripts/: data_processing_api.py
src/models/: model.pkl  scaler.pkl
src/train/: config.py  data_processing.py  main.py  model_training.py  utils.py
tests/api/: test_model_services.py  test_routes.py  test_schemas.py
tests/frontend/: test_utils.py
tests/scripts/: test_data_processing_api.py
