[project]
name = "projeto-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "ruff>=0.14.10",
    "joblib>=1.5.3",
    "streamlit>=1.54.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "python app.py"
lint = "ruff check ."
test = "pytest"
api = "uvicorn api.main:app --reload --host 0.0.0.0 --port 8000"
front = "streamlit run frontend/app.py --server.port 8501"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
